--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "nerd",
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "server": "nodemon ./controllers/server.js --inspect"
   },
   "repository": {
     "type": "git",
@@ -20,11 +21,16 @@
   "devDependencies": {
     "buffer": "^6.0.3",
     "parcel": "^2.9.3",
-    "process": "^0.11.10"
+    "postcss": "^8.4.30",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.3.3"
   },
   "dependencies": {
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
