--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/madhujsss/project1/issues"
   },
-  "homepage": "https://github.com/madhujsss/project1/tree/main/dist",
+  "homepage": "https://github.com/madhujsss/project1",
   "devDependencies": {
     "buffer": "^6.0.3",
     "parcel": "^2.9.3",
